# ModernGameEngine

./: .gitmodules  CMakeBuildAndroid.bat  CMakeBuildAndroid.sh  CMakeBuildIOS.sh  CMakeBuildMac.sh  CMakeBuildWindow.bat  CMakeLists.txt  README.md  gitmodules.txt
CMake/: FindVulkan.cmake
Docs/: Game_Uniform.doc  Graphics_API_Knowledge.doc  图形渲染器设计.doc  游戏优化方案.doc
FrameGraph/: CMakeLists.txt
FrameGraph/Public/: BindingIndex.h  BufferDesc.h  BufferView.h  CommandBuffer.h  CommandBufferPtr.h  Config.h  DrawCommandBuffer.h  DrawContext.h  EResourceState.h  FrameGraph.h  FrameGraphDrawTask.h  FrameGraphEnums.h  FrameGraphTask.h  IDs.h  ImageDesc.h  ImageLayer.h  ImageSwizzle.h  MemoryDesc.h  MipmapLevel.h  MultiSamples.h  Pipeline.cpp  Pipeline.h  PipelineResoure.h  RenderState.h  RenderStateEnum.h  ResourceEnums.h  SamplerEnums.h  ShaderEnums.h  Types.h  VertexDesc.h  VertexEnums.h  VertexInputState.cpp  VertexInputState.h  VulkanType.h
FrameGraph/STL/: Common.h  Config.h  Defines.h
FrameGraph/STL/Algorithms/: Cast.h  Hash.h
FrameGraph/STL/CompileTime/: Constants.h  DefaultType.h  Hash.h  TypeTraits.h
FrameGraph/STL/Containers/: ArrayView.h  ChunkedIndexedPool.h  FixedArray.h  FixedMap.h  NtStringView.h  Ptr.h  Singleton.h  StaticString.h  StringView.h  Union.h
FrameGraph/STL/Log/: Log.cpp  Log.h
FrameGraph/STL/Math/: BitMath.h  Bytes.h  Color.h  Math.h  Rectangle.h  Vec.h
FrameGraph/STL/Memory/: MemUtils.h  UntypedAllocator.h
FrameGraph/STL/ThreadSafe/: AtomicPtr.h  DataRaceCheck.h  DummyLock.h
FrameGraph/Shared/: EnumUtil.h  LocalResourceID.h  ResourceBase.h  ResourceDataRange.h
FrameGraph/Vulkan/: VCommon.h  VulkanCommon.h
FrameGraph/Vulkan/Buffer/: VBuffer.cpp  VBuffer.h  VLocalBuffer.cpp  VLocalBuffer.h
FrameGraph/Vulkan/Instance/: VDevice.cpp  VDevice.h  VFrameGraph.cpp  VFrameGraph.h  VResourceManager.cpp  VResourceManager.h
FrameGraph/Vulkan/Memory/: VMemoryObj.cpp  VMemoryObj.h
FrameGraph/Vulkan/Utils/: VEnum.h  VEnumToString.h
FrameGraph/extensions/: CMakeLists.txt
FrameGraph/extensions/vulkan_loader/: CMakeLists.txt  VulkanCheckError.cpp  VulkanCheckError.h  VulkanLoader.cpp  VulkanLoader.h
Render/: Base.h  Buffer.cpp  Buffer.h  Camera.hpp  Pool.h
Render/Vulkan/: ApplicationBase.cpp  ApplicationBase.h  ApplicationRaytracingBase.cpp  ApplicationRaytracingBase.h  UIOverlay.cpp  UIOverlay.h  VulkanAndroid.cpp  VulkanAndroid.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameBuffer.hpp  VulkanInitializers.hpp  VulkanModel.cpp  VulkanModel.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTool.cpp  VulkanTool.h  VulkaneDebug.cpp  VulkaneDebug.h
Unit_Test/: CMakeLists.txt  main.cpp
Unit_Test/ResourceManager/: CMakeLists.txt  main.cpp
Unit_Test/ResourceManager/Import/: import_json.json
Unit_Test/ResourceManager/Import/Asset/: AssetPipeline.cpp  AssetPipeline.h  TextureProcessor.h
Unit_Test/ResourceManager/Import/Asset/Base/: Asset.h
Unit_Test/ResourceManager/Import/Config/: ConfigSystem.cpp  ConfigSystem.h
Unit_Test/draw_compute/: CMakeLists.txt
Unit_Test/draw_compute/include/: ApplicationWindow.h
Unit_Test/draw_compute/src/: ApplicationWindow.cpp
Unit_Test/draw_cubemap/: CMakeLists.txt
Unit_Test/draw_cubemap/include/: ApplicationWindow.h
Unit_Test/draw_cubemap/src/: ApplicationWindow.cpp
Unit_Test/draw_indirectDraw/: CMakeLists.txt
Unit_Test/draw_indirectDraw/include/: ApplicationWindow.h
Unit_Test/draw_indirectDraw/src/: ApplicationWindow.cpp
Unit_Test/draw_mesh/: CMakeLists.txt
Unit_Test/draw_mesh/include/: Vulkan.h  mesh.h
Unit_Test/draw_mesh/src/: Vulkan.cpp  mesh.cpp
Unit_Test/draw_model/: CMakeLists.txt
Unit_Test/draw_model/include/: ApplicationWindow.h
Unit_Test/draw_model/src/: ApplicationWindow.cpp
Unit_Test/draw_multhread/: CMakeLists.txt
Unit_Test/draw_multhread/include/: ApplicationWindow.h
Unit_Test/draw_multhread/src/: ApplicationWindow.cpp
Unit_Test/draw_multiview/: CMakeLists.txt
Unit_Test/draw_multiview/include/: ApplicationWindow.h
Unit_Test/draw_multiview/src/: ApplicationWindow.cpp
Unit_Test/draw_pass/: CMakeLists.txt  main.cpp
Unit_Test/draw_pass/include/: ApplicationWindow.h  Vulkan.h
Unit_Test/draw_pass/src/: ApplicationWindow.cpp  Vulkan.cpp
Unit_Test/draw_rayShadow/: CMakeLists.txt
Unit_Test/draw_rayShadow/src/: ApplicationWindow.cpp
Unit_Test/draw_rayTexture/: CMakeLists.txt
Unit_Test/draw_rayTexture/include/: ApplicationWindow.h
Unit_Test/draw_rayTexture/src/: ApplicationWindow.cpp
Unit_Test/draw_rayTriangle/: CMakeLists.txt
Unit_Test/draw_rayTriangle/include/: ApplicationWindow.h
Unit_Test/draw_rayTriangle/src/: ApplicationWindow.cpp
Unit_Test/draw_render_base/: CMakeLists.txt
Unit_Test/draw_render_base/include/: Util.h  UtilVulkan.h
Unit_Test/draw_render_base/src/: Util.cpp  UtilVulkan.cpp  Vulkan.cpp
Unit_Test/draw_texture/: CMakeLists.txt
Unit_Test/draw_texture/include/: Vulkan.h  mesh.h
Unit_Test/draw_texture/shader/: draw_texture.frag  draw_texture.vert  draw_texture_f.spv  draw_texture_v.spv
Unit_Test/draw_texture/src/: Vulkan.cpp
Unit_Test/draw_triangle/: CMakeLists.txt  main.cpp
Unit_Test/draw_triangle/include/: ApplicationWindow.h
Unit_Test/draw_triangle/src/: ApplicationWindow.cpp  Vulkan.cpp
Unit_Test/dx12_triangle/: CMakeLists.txt  main.cpp
Unit_Test/dx12_triangle/include/: Core.h
Unit_Test/dx12_triangle/src/: Core.cpp
Unit_Test/include/: Vulkan.h
Unit_Test/render_lib/: CMakeLists.txt
Unit_Test/src/: Vulkan.cpp
android/: build.gradle
android/examples/base/: CMakeLists.txt  VulkanAndroid.cpp  VulkanAndroid.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkaneDebug.cpp  VulkaneDebug.h
android/examples/draw_compute/: CMakeLists.txt  build.gradle
ios/: CMakeLists.txt  MVKExample.cpp  MVKExample.h  MoltenVK.xcframework  README_MoltenVK_Examples.md
ios/HelloWorld/: CMakeLists.txt  Main.cpp
ios/drawtrangle/: CMakeLists.txt  MVKExample.cpp  MVKExample.h
ios/drawtrangle/ios/: DemoViewController.mm
tool/: BuildGlslangMac.sh
(+69 files in other folders)
